# Agentic-DRA-2

./: .gitignore  MACHINE_GRPC_EXECUTION_PLAN.md  atlas_cli.py  docker-compose.yml  dra.proto  dra_pb2.py  dra_pb2_grpc.py  idl_diagram.txt  pyproject.toml  requirements.txt  scheduled_deploy.py
agent/: __init__.py  __main__.py  client.py  dra_agent.py  dra_serve_process.py  env.py  inspect_run.py  run.py  tools.py
cli/: __main__.py  display.py  health.py  repl.py
cli/commands/: deploy.py  instances.py  status.py  stop.py
db/: README.md
db/init/: 001_shared_seed.sql
db/supabase/: schema.sql
dra/: __init__.py  __main__.py  database.py  entry.py  env.py  grpc_server.py  models.py  serve.py
dra/repositories/: job_queue.py  jobs.py  machines.py  users.py
dra/sql/: add_deployment_users_auth.sql  add_dra_grpc_target.sql  add_jobs_username.sql
routes/: contracts.py  deploy.py  llm_scheduler.py  main.py  rpc_connect_deploy.py  scheduler.py
tests/: test_agent_grpc.py  test_deploy_route_tool_path.py  test_dra_serve.py  test_env_loading.py  test_grpc_server_sync.py  test_jobs_repository.py  test_machines_repository.py  test_scheduled_deploy.py  test_scheduler_loopback.py
